# cost-calculator

./: .gitignore  .gitpod.yml  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: kotlin.yml  rust.yml  semgrep.yml
androidApp/: build.gradle.kts
androidApp/src/main/: AndroidManifest.xml
androidApp/src/main/kotlin/com/benjaminsproule/costcalculator/: MainActivity.kt
androidApp/src/main/res/drawable/: ic_launcher_foreground.xml
androidApp/src/main/res/values/: strings.xml  themes.xml
app/: build.gradle.kts
app/src/androidTest/java/com/benjaminsproule/costcalculator/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
calculators/: Cargo.toml
calculators/src/: etsy_calculator.rs  lib.rs  paypal_calculator.rs  shopify_calculator.rs  stripe_calculator.rs  sumup_calculator.rs
composeApp/: build.gradle.kts
composeApp/src/desktopMain/desktop-icons/: icon-mac.icns
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
gtk/: Cargo.toml
gtk/src/: main.rs
gtk/src/store/: config.rs
gtk/src/ui/: etsy_ui.rs  materials_ui.rs  options_ui.rs  paypal_ui.rs  shopify_ui.rs  stripe_ui.rs  sumup_ui.rs
http/: http-client.env.json
server/: build.gradle.kts
src/: calculator.rs  config.rs  etsy_calculator.rs  main.rs  paypal_calculator.rs  shopify_calculator.rs  stripe_calculator.rs
src/calculator/: etsy_calculator.rs  mod.rs  paypal_calculator.rs  shopify_calculator.rs  stripe_calculator.rs  sumup_calculator.rs
src/cli/: etsy_cli.rs  mod.rs  options_cli.rs  paypal_cli.rs  shopify_cli.rs  stripe_cli.rs  sumup_cli.rs
src/store/: config.rs  materials.rs  mod.rs
src/ui/: etsy_ui.rs  materials_ui.rs  mod.rs  options_ui.rs  paypal_ui.rs  shopify_ui.rs  stripe_ui.rs  sumup_ui.rs
(+90 files in other folders)
