[package]
name = "jackie-cost-calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.5.3", package = "libadwaita", features = [ "gtk_v4_6" ] }
confy = "0.5.1"
gtk4 = { version = "0.7.2", features = [ "v4_6" ] }
serde = { version = "1.0.188", features = [ "derive" ] }
