[package]
name = "cost-calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.8.0", package = "libadwaita", features = ["gtk_v4_6"] }
confy = "1.0.0"
dirs = "6.0.0"
gtk4 = { version = "0.10.0", features = ["v4_6"] }
serde = { version = "1.0.219", features = ["derive"] }
calculators = { path = "../calculators" }
